--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ rand = "0.8"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
 # Command line argument parsing
-clap = { version = "4.0", features = ["derive"] }
+clap = { version = "4.0", features = ["derive", "env"] }
 
 # Logging
 tracing = "0.1"
