更新项目信息：修改作者信息和GitHub仓库地址，更新HTML页面中的链接

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "jrebel-rs"
 version = "0.1.0"
 edition = "2021"
-authors = ["yu-xiaoyao"]
+authors = ["lihongjie0209"]
 description = "JRebel License Active Server implemented in Rust"
 license = "MIT"
 
